# papers

./: README.md  pyproject.toml
papers/bitnet158/: README.md  bitlinear158.py
papers/bitnet158_interpretation/: README.md  bitlinear158.py  inject.py
papers/transformer/: README.md  training.ipynb  transformer.py
papers/transformer/embeddings/: positional_encoding.py
papers/transformer/layers/: decoder.py  encoder.py
papers/transformer/models/: decoder_stack.py  encoder_stack.py
papers/transformer/sublayers/: multi_head_attention.py  position_wise_feed_forward.py
